# i3pw

./: .gitignore  LICENSE  README.md  REVIEW.md  pyproject.toml
.github/workflows/: ci.yml
examples/: benchmark.py  complex_selection_ipw.py  doubly_robust_trait.py  genetics_ascertainment.py  monte_carlo.py  multi_outcome_calibration.py  probit_selection_lee_vs_ipw.py  schoeler_plus_prevalence.py  selection_inference_extensive.py  selection_probability_inference.py  ukb_participation.py
src/i3pw/: __init__.py  _kernels.py  _links.py  aipw.py  calibration.py  dgm.py  evaluation.py  liability.py  methods.py  metrics.py  penalized.py  uncertainty.py  weights.py
tests/: test_aipw.py  test_calibration.py  test_dgm.py  test_evaluation.py  test_kernels.py  test_liability.py  test_links_metrics.py  test_methods.py  test_penalized_methods.py  test_uncertainty.py  test_weights.py
