[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "i3pw"
version = "0.1.0"
description = "Informed Inference of Inverse Probability Weights: numba-accelerated selection-bias correction via prevalence-penalized IPW."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Bjarni Vilhjalmsson" }]
keywords = [
    "selection-bias",
    "inverse-probability-weighting",
    "epidemiology",
    "causal-inference",
    "numba",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "numba>=0.58",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/bvilhjal/i3pw"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
