[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "i3pw"
version = "0.1.0"
description = "Informed Inference of Inverse Probability Weights: selection-bias correction by calibrating IPW weights to known population prevalences."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Bjarni Vilhjalmsson" }]
keywords = [
    "selection-bias",
    "inverse-probability-weighting",
    "calibration",
    "epidemiology",
    "causal-inference",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
test = ["pytest>=7"]
dev = ["pytest>=7", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/bvilhjal/i3pw"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
i3pw = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E741"]  # ambiguous variable names (e.g. l1_mask math) are fine here
